# oracle_payslip_scraper

./: .env.example  .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  rename_existing_files.py  run.sh  scraper.py  setup.sh  test_logic.py
