[tool.poetry]
name = "oracle-payslip-scraper"
version = "0.1.0"
description = "Web scraper para obtener recibos de nómina del portal de Oracle"
authors = ["Armando Sepulveda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.47.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
